--- a/assets/style.css
+++ b/assets/style.css
@@ -22,19 +22,6 @@
   color: white;
 }
 
-#offers {
-  padding: 80px 0;
-}
-
-.offer-img {
-  width: 80px;
-  margin: 50px 0;
-}
-
-.offer {
-  padding: 20px;
-}
-
 .title::after {
   content: "";
   display: block;
@@ -49,7 +36,7 @@
 }
 
 .about-img {
-  width: 150px;
+  width: 170px;
   height: 200px;
 }
 
@@ -99,7 +86,7 @@
   width: 60px;
 }
 
-.place {
+.location {
   padding-top: 35px;
   text-align: right;
 }
@@ -112,4 +99,21 @@ footer {
   background-color: cadetblue;
   font-size: 15px;
   color: white;
+}
+
+@media only screen and (max-width: 530px) {
+  .home {
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #contact {
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
